--- a/Main/test.html
+++ b/Main/test.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="UTF-8">    
-    <link rel="stylesheet" href="C:\Users\saman\OneDrive\Desktop\Rutgers Coding Course\RUT-VIRT-FSF-PT-12-2022-U-LOLC\01-Class-Content\01-HTML-Git-CSS\01-Activities\22-Stu_Mini-Project\styles.css">
-
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <link rel="stylesheet" href="C:\Users\saman\OneDrive\Desktop\School Files\First-Website\Main\styles.css">
     <title>My New Website</title>
-
   </head>
 
+  <body>
+    <header>
+      <nav class="text-right">
+        <ul>
+          <li> <a href="https:github.com/">Github</a></li>
+          <li>Portfolio</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+
+    <main>
+      <h1 class="text-center">My New Website</h1>
+      <figure>
+        <img src="C:\Users\saman\OneDrive\Desktop\School Files\First-Website\coming-soon.webp" alt="image with coming soon text">
+        <figcaption class="text-center">Coming 2023</figcaption> 
+      </figure>
+      <section id="contact">
+        <h2 class="text-center">Contact Me</h2>
+       <form>
+        <ul>
+          <li>
+            <label class="text-right" for="name">Name</label>
+            <input type="text" id="name" name="user-name">
+          </li>
+          <li>
+          <label class="text-right" for="email">Email</label>
+          <input type="text" id="email" name="user-email">
+          </li>
+        </ul>
+        <div class="text-center">
+          <button type="submit">SEND</button>
+        </div>
+       </form>
+      </section>
+    </main>
+
+
+    <footer class="text-center">
+      2022 My New Website Productions
+    </footer>
+  
+  </body>
+  </html
   
